--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "qrcode": "^1.5.4",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
