--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@tanstack/react-query": "^5.63.0",
+    "@yudiel/react-qr-scanner": "^2.2.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "campus-health-system": "file:",
@@ -38,6 +39,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.471.0",
     "postcss": "^8.4.49",
+    "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
